# kodi-game-scripting

./: .coveragerc  .gitignore  .pylintrc  .travis.yml  LICENSE.md  README.md  azure-pipelines.yml  config.py  conftest.py  git_access.py  libretro_ctypes.py  process.sh  process_game_addons.py  requirements.txt  setup.cfg  setup.py  template_processor.py  tox.ini  utils.py
.azure/: azure-process-addon.yml  common-steps.yml  job-template.yml
.github/workflows/: process-cores.yml  python-app.yml  sync-addon-metadata-translations.yml.j2
kodi_game_scripting/: config.py  credentials.py  git_access.py  libretro_ctypes.py  libretro_super.py  process_game_addons.py  template_processor.py  utils.py  versions.py
template/: CMakeLists.txt.j2
template/game.libretro.{{ game.name }}/: addon.xml.in.j2  addon.xml.in.j2+
template_description/: game.libretro.{{ game.name }}.txt.j2
template_summary/: summary.html.j2
templates/addon/: .gitignore.j2  .travis.yml.j2  CMakeLists.txt.j2  Jenkinsfile.j2  README.md.j2  appveyor.yml.j2
tests/: .gitignore
tests/integration/test_data/test_template_processor/addon/: .travis.yml  CMakeLists.txt  Jenkinsfile  README.md  appveyor.yml
tests/integration/test_data/test_template_processor/addon/debian/: changelog.in  control  copyright
tests/integration/test_data/test_template_processor/addon/depends/common/mygame/: CMakeLists.txt  mygame.txt
tests/integration/test_data/test_template_processor/addon/game.libretro.mygame/: addon.xml.in
tests/integration/test_data/test_template_processor/addon/game.libretro.mygame/resources/: settings.xml
tests/integration/test_data/test_template_processor/addon/game.libretro.mygame/resources/language/English/: strings.po
tests/integration/test_data/test_template_processor/addon/game.libretro.mygame/resources/language/resource.language.en_gb/: strings.po
tests/unit/: test_utils.py  (+6 more)
(+40 files in other folders)
