[metadata]
name = kodi-game-scripting
summary = Scripting for Kodi Game add-ons
description-file = README.md
description-content-type = text/markdown; charset=UTF-8
url = https://github.com/fetzerch/kodi-game-scripting
author = Christian Fetzer
author-email = fetzer.ch@gmail.com
license = GNU General Public License v2 or later (GPLv2+)
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    OSI Approved :: GNU General Public License v2 or later (GPLv2+)
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: POSIX
    Programming Language :: Python
    Topic :: Software Development :: Build Tools
    Topic :: Software Development :: Code Generators
keywords = kodi retroplayer

[entry_points]
console_scripts =
    process_game_addons.py = kodi_game_scripting.process_game_addons:main
